# Projects

./: .gitignore  Readme.md
.wake/extension/: local-local-chain-53e83ada-7a55-48fc-ac67-36801b8e74a9.json
1ShootGame/: README.md
2025/: README_.md
Astro Jaeger/: README.md
BariumPad/: README.md
BlackStallion/: BS_Token_Smart_Contract.sol
Blob Genesis/: SmartContract_Audit_Solidproof_BlueLobster
Bullperks/Rust/Contracts/admin-cli/: Cargo.toml  README.md
Bullperks/Rust/Contracts/admin-cli/src/: main.rs
Bullperks/Rust/Contracts/programs/claiming-factory/: Cargo.toml
Bullperks/Rust/Contracts/programs/claiming-factory/src/: lib.rs
CANDY/: README.md
ChatWise/: Readme.md
CleverAgent FInance/: NewFile.txt
Cleveragent Finance/: NewFile.txt  solidity-metrics_cleveragent.html
Dogeliens/: README.md
DopeWarZ/: Staking.sol
DriveZ_Mystery_Box/: NewFile.txt
Dulion/: Test.txt
FIFADoge/: README.md
France Fan Token ($FRA)/: README.md
Get Rich Doge/: getrichdoge.sol
GlobalGuide/: NewFile.txt
Jiyu/: README.md
Launchwall/: PPOOL.sol
Legend of Football/: Readme.md
LykaCoin/: Readme.md
Metaverser/: Readme.md
Mooky/: README.md
Neutra Finance/: Readme.md
QuizBox/: README.md
Rocketize/: README.md
Rocketsize/: README.md
Safu_Protocol/: ERC721Staking.sol
Shield11/: README.md
SoccerCrypto/: SmartContract_Audit_Solidproof_SoccerCrypto.docx
StepWell/: Readme.md
Supontis/: README.md
Travenis/: README.md
Trendo ID Protocol/: README.md
VenusAI/: README.md
X Capital/: README.md
vEmpire/: MasterChefUSDC.sol
(+3263 files in other folders)
